[Frontend] Ensure HRs have no internal gaps
Sometimes, under unclear circumstances, presumably due to pixel rounding
(wheee!), the top and bottom borders of <hr> elements (styled in a
pertinent manner) would be one pixel apart instead of flush to each
other, resulting in an undesired appearance.

Using a single border instead of multiple ones should eliminate the
issue.

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -56,7 +56,8 @@ body {
 }
 #load-wrapper hr {
   margin: 10px 0;
-  border: 1px solid black;
+  border: none;
+  border-top: 2px solid black;
 }
 
 #load-wrapper .content-box {
@@ -132,7 +133,8 @@ body {
   margin: 5px 0;
 }
 .error-box hr {
-  border: 1px solid black;
+  border: none;
+  border-top: 2px solid black;
 }
 .error-box .bottom {
   text-align: right;
